--- a/.gitignore
+++ b/.gitignore
@@ -207,3 +207,16 @@ marimo/_lsp/
 __marimo__/
 
 .vscode
+.DS_Store
+
+db.sqlite3
+pytest_cache/*
+.coverage
+.coveragec
+dump.rdb
+htmlcov/
+.pytest_cache
+static_files
+.DS_Store
+DS_Store
+node_modules
